--- a/source/sass/blocks/secondary-nav.scss
+++ b/source/sass/blocks/secondary-nav.scss
@@ -1,9 +1,28 @@
 .secondary-nav {
   grid-column: 1 / -1;
+
+  @include vp-1023 {
+    display: none;
+    padding-bottom: 48px;
+    position: absolute;
+    top: 100px;
+    right: 60px;
+    background-color: #f8f7fc;
+    border-radius: 0 0 30px 30px;
+
+    &--open {
+      display: block;
+    }
+  }
 }
 
 .secondary-nav__list {
   display: flex;
   flex-wrap: wrap;
   row-gap: size(10px);
+
+  @include vp-1023 {
+    flex-direction: column;
+    row-gap: 0;
+  }
 }
