--- a/source/pug/components/base/header.pug
+++ b/source/pug/components/base/header.pug
@@ -15,28 +15,6 @@ mixin header(headerMods, currentUrl)
       },
     ]
 
-  -
-    const headerItems = [
-      {
-        text: ""
-      },
-      {
-        text: ""
-      },
-      {
-        text: ""
-      },
-      {
-        text: ""
-      },
-      {
-        text: ""
-      },
-      {
-        text: ""
-      },
-    ]
-
   header.header(class=headerMods)
     .header__container
       .container
@@ -61,37 +39,74 @@ mixin header(headerMods, currentUrl)
         nav.secondary-nav
           div.secondary-nav__list
             details.secondary-nav__item.detail
-              summary.detail__heading Дизайн
+              summary.detail__title
+                span.detail__heading
+                  | Дизайн
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+                  +btn({text: "3D анимация", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "3D MAX", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "3D-моделирование", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe After Effects", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe Illustrator", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe Photoshop", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Отрисовка иллюстраций", href: "#"}).detail__link
+            details.secondary-nav__item.detail
+              summary.detail__title
+                span.detail__heading
+                  | Программирование
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+                  +btn({text: "3D анимация", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "3D MAX", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "3D-моделирование", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe After Effects", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe Illustrator", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Adobe Photoshop", href: "#"}).detail__link
+                li.detail__item
+                  +btn({text: "Отрисовка иллюстраций", href: "#"}).detail__link
+
+            details.secondary-nav__item.detail
+              summary.detail__title
+                span.detail__heading
+                  | Аналитика
                 +icon("arrow", 10, 10)
               ul.detail__list
                 li.detail__item
 
             details.secondary-nav__item.detail
-              summary.detail__heading Программирование
+              summary.detail__title
+                span.detail__heading
+                  | Менеджмент
                 +icon("arrow", 10, 10)
               ul.detail__list
                 li.detail__item
 
             details.secondary-nav__item.detail
-              summary.detail__heading Аналитика
+              summary.detail__title
+                span.detail__heading
+                  | Маркетинг
                 +icon("arrow", 10, 10)
               ul.detail__list
                 li.detail__item
 
             details.secondary-nav__item.detail
-              summary.detail__heading Менеджмент
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
-            details.secondary-nav__item.detail
-              summary.detail__heading Маркетинг
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
-            details.secondary-nav__item.detail
-              summary.detail__heading Финансы
+              summary.detail__title
+                span.detail__heading
+                  | Финансы
                 +icon("arrow", 10, 10)
               ul.detail__list
                 li.detail__item
