--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -3,22 +3,45 @@
   display: grid;
   grid-template-columns: 1fr size(558px);
 
+  @include vp-1023 {
+    padding: 100px 0 25px;
+    display: flex;
+    flex-direction: column;
+  }
+
   h1 {
     margin: 0;
     margin-bottom: size(31px);
-    width: size(687px);
+    max-width: size(687px);
     font-size: size(50px);
     line-height: size(61px);
     font-weight: 700;
+
+    @include vp-1023 {
+      margin-bottom: 31px;
+      max-width: 600px;
+      font-size: 45px;
+      line-height: 56px;
+
+      // & br {
+      //   display: none;
+      // }
+    }
   }
 
   p {
     margin: 0;
     margin-bottom: size(47px);
-    width: size(459px);
+    max-width: size(459px);
     line-height: size(23px);
     font-weight: 500;
     color: #9e9e9e;
+
+    @include vp-1023 {
+      margin-bottom: 26px;
+      max-width: 400px;
+      line-height: 20px;
+    }
   }
 
   a {
@@ -37,6 +60,19 @@
       left: 0;
       bottom: 0;
       margin: auto size(46px) auto auto;
+    }
+
+    @include vp-1023 {
+      padding: 14px 60px 14px 17px;
+      line-height: 17px;
+      border-radius: 12px;
+      max-width: 200px;
+
+      svg {
+        width: 29px;
+        height: 29px;
+        margin-right: 18px;
+      }
     }
   }
 }
