--- a/source/sass/blocks/bunner.scss
+++ b/source/sass/blocks/bunner.scss
@@ -2,6 +2,12 @@
   padding: size(78px) size(65px) size(94px);
   background-color: $color-default-white;
   border-radius: size(72px);
+
+  @include vp-1023 {
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+  }
 }
 
 .bunner__heading {
@@ -12,12 +18,26 @@
   font-weight: 600;
   text-align: center;
   max-width: size(997px);
+
+  @include vp-1023 {
+    margin-bottom: 35px;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: start;
+    max-width: 997px;
+  }
 }
 
 .bunner__wrapper {
   display: grid;
   grid-template-columns: 37% 1fr;
   gap: size(50px);
+
+  @include vp-1023 {
+    display: block;
+    margin: 0 auto;
+    max-width: 425px;
+  }
 }
 
 .bunner__list {
@@ -28,6 +48,10 @@
   display: flex;
   flex-direction: column;
   gap: size(47px);
+
+  @include vp-1023 {
+    display: none;
+  }
 }
 
 .bunner__item {
@@ -65,6 +89,20 @@
   img {
     margin-bottom: size(70px);
     width: size(425px);
-    height: size(383px);
+    height: size(425px);
+  }
+
+  @include vp-1023 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $color-default-white;
+    border-radius: 34px;
+
+    img {
+      margin-bottom: 0;
+      width: 425px;
+      height: 425px;
+    }
   }
 }
