--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -13,6 +13,10 @@
 
 .direction__container {
   padding: size(51px) 0 size(149px);
+
+  @include vp-1023 {
+    padding: 26px 0 75px;
+  }
 }
 
 .direction__heading {
@@ -30,6 +34,12 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: size(48px) size(20px);
+
+  @include vp-1023 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .direction__link {
