--- a/source/sass/blocks/popular-destinations.scss
+++ b/source/sass/blocks/popular-destinations.scss
@@ -1,3 +1,9 @@
+.popular-destinations {
+  @include vp-1023 {
+    display: none;
+  }
+}
+
 .popular-destinations__container {
   padding-top: size(10px);
 }
