--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -1,6 +1,11 @@
 .preview {
   padding-left: size(23px);
   max-width: size(362px);
+
+  @include vp-1023 {
+    padding: 5px 21px 39px 21px;
+    max-width: none;
+  }
 }
 
 .preview__heading {
