--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,7 @@
 @import "blocks/direction-item";
 @import "blocks/promo";
 @import "blocks/bunner";
+@import "blocks/bunner-content";
 @import "blocks/preview";
 @import "blocks/copyright";
 @import "blocks/category";
