--- a/source/sass/blocks/bunner.scss
+++ b/source/sass/blocks/bunner.scss
@@ -20,9 +20,9 @@
   max-width: size(997px);
 
   @include vp-1023 {
-    margin-bottom: 35px;
-    font-size: 40px;
-    line-height: 48px;
+    margin: 0 80px 35px;
+    font-size: 21px;
+    line-height: 25px;
     text-align: start;
     max-width: 997px;
   }
@@ -35,8 +35,6 @@
 
   @include vp-1023 {
     display: block;
-    margin: 0 auto;
-    max-width: 425px;
   }
 }
 
@@ -86,23 +84,5 @@
 }
 
 .bunner__content {
-  img {
-    margin-bottom: size(70px);
-    width: size(425px);
-    height: size(425px);
-  }
 
-  @include vp-1023 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $color-default-white;
-    border-radius: 34px;
-
-    img {
-      margin-bottom: 0;
-      width: 425px;
-      height: 425px;
-    }
-  }
 }
