--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -9,13 +9,25 @@
     bottom: 0;
     z-index: -1;
   }
+
+  @include vp-1023 {
+    .container {
+      margin: 0;
+    }
+  }
 }
 
 .direction__container {
   padding: size(51px) 0 size(149px);
 
   @include vp-1023 {
-    padding: 26px 0 75px;
+    padding: 60px 0 49px;
+  }
+}
+
+.direction__title {
+  @include vp-1023 {
+    margin: 0 80px;
   }
 }
 
@@ -25,20 +37,29 @@
   font-size: size(40px);
   line-height: size(50px);
   font-weight: 600;
+
+  @include vp-1023 {
+    margin-bottom: 28px;
+    font-size: 21px;
+    line-height: 26px;
+  }
 }
 
 .direction__list {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: size(48px) size(20px);
+
+  // до 1024px
+  @include vp-1024 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: size(48px) size(20px);
+  }
 
   @include vp-1023 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 0 80px 25px 80px;
+    width: 283px;
   }
 }
 
@@ -48,4 +69,25 @@
   color: #6b6b6b;
   background-color: $color-default-white;
   border-radius: size(56px);
+}
+
+.direction__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+}
+
+.direction__button {
+  position: static;
+  margin: 0;
+  width: 50px;
+  height: 50px;
+  background-color: #f8f7fc;
+  border: 1px solid #efefef;
+  border-radius: 50%;
+
+  &::after {
+    font-size: 12px;
+    color: #2b2b2b;
+  }
 }
