feat: выделяет блок secondary-nav из header в отдельный компонент

--- a/source/pug/components/base/header.pug
+++ b/source/pug/components/base/header.pug
@@ -36,78 +36,4 @@ mixin header(headerMods, currentUrl)
                     a.main-nav__link(href=link.href)= link.text
     .header__container
       .container
-        nav.secondary-nav
-          div.secondary-nav__list
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Дизайн
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-                  +btn({text: "3D анимация", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "3D MAX", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "3D-моделирование", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe After Effects", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe Illustrator", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe Photoshop", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Отрисовка иллюстраций", href: "#"}).detail__link
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Программирование
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-                  +btn({text: "3D анимация", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "3D MAX", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "3D-моделирование", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe After Effects", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe Illustrator", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Adobe Photoshop", href: "#"}).detail__link
-                li.detail__item
-                  +btn({text: "Отрисовка иллюстраций", href: "#"}).detail__link
-
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Аналитика
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Менеджмент
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Маркетинг
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
-            details.secondary-nav__item.detail
-              summary.detail__title
-                span.detail__heading
-                  | Финансы
-                +icon("arrow", 10, 10)
-              ul.detail__list
-                li.detail__item
-
+        +directing()
