--- a/source/pug/components/blocks/intro.pug
+++ b/source/pug/components/blocks/intro.pug
@@ -45,7 +45,7 @@ mixin intro()
           .direction__title
             h2.direction__heading
               | Выбери направление
-          .swiper
+          .direction__swiper.swiper
             ul.direction__list.swiper-wrapper
               li.direction__item.swiper-slide
                 +btn({href: "#"}).direction__link
