--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -75,6 +75,11 @@
   display: flex;
   justify-content: center;
   gap: 10%;
+
+  // максимум до 1024px
+  @include vp-1024 {
+    display: none;
+  }
 }
 
 .direction__button {
