--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -1,5 +1,10 @@
 .category__container {
   padding-top: size(10px);
+
+  @include vp-767 {
+    margin: 0 20px;
+    padding-top: 28px;
+  }
 }
 
 h2.category__heading {
@@ -8,6 +13,10 @@ h2.category__heading {
   line-height: size(24px);
   font-weight: 500;
   color: #fafafa;
+
+  @include vp-1023 {
+    margin-bottom: 23px;
+  }
 }
 
 .category__text {
