--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,41 @@
+.copyright__container {
+  @include vp-767 {
+    margin: 0 20px;
+    padding-bottom: 28px
+  }
+}
+
 .copyright__title {
   margin-bottom: size(47px);
 
   svg {
     width: size(125px);
     height: size(41px);
+  }
+
+  @include vp-767 {
+    margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+
+    svg {
+      width: 23px;
+      height: 26px;
+    }
+  }
+}
+
+.copyright__heading {
+  @include vp-1023 {
+    display: none;
+  }
+
+  @include vp-767 {
+    display: block;
+    color: $color-default-white;
+    line-height: 17px;
+    font-weight: 500;
   }
 }
 
@@ -13,4 +45,9 @@
   font-size: size(20px);
   line-height: size(32px);
   font-weight: 500;
+
+  @include vp-1023 {
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
