--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -5,6 +5,12 @@
     display: block;
     color: $color-default-white;
   }
+
+  @include vp-767 {
+    .container {
+      margin: 0;
+    }
+  }
 }
 
 .footer__container {
@@ -22,5 +28,28 @@
   @include vp-1023 {
     grid-template-columns: 220px 200px;
     justify-content: space-between;
+    min-height: auto;
+  }
+
+  @include vp-767 {
+    padding: 28px 0 100px;
+    display: block;
+  }
+}
+
+.footer__content {
+  @include vp-767 {
+    // margin: 0 20px;
+    position: relative;
+
+    & + & > div::after {
+      content: "";
+      height: 1px;
+      background-color: #504f4f;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
   }
 }
