--- a/source/sass/blocks/direction-item.scss
+++ b/source/sass/blocks/direction-item.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 
   @include vp-1023 {
-    padding: 40px 22px 49px;
+    padding: 40px 22px 52px;
   }
 }
 
@@ -18,7 +18,7 @@
   }
 
   @include vp-1023 {
-    margin-bottom: 44px;
+    margin-bottom: 35px;
   }
 }
 
@@ -56,6 +56,10 @@
   flex-direction: column;
   row-gap: size(3px);
   overflow-x: hidden;
+
+  @include vp-1023 {
+    row-gap: 0;
+  }
 }
 
 .direction-item__item {
