--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,7 +1,32 @@
+.about {
+  @include vp-767 {
+    position: relative;
+    z-index: 0;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 811px;
+      top: -69px;
+      z-index: -1;
+    }
+  }
+
+  @include vp-768 {
+    img {
+      display: none;
+    }
+  }
+}
+
 .about__container {
-  padding: size(165px) 0 size(54px);
+  padding: size(167px) 0 size(54px);
   display: grid;
   grid-template-columns: 1fr size(558px);
+
+  @include vp-1439 {
+    display: block;
+  }
 
   @include vp-1023 {
     padding: 55px 0 60px;
@@ -15,17 +40,20 @@
     max-width: size(687px);
     font-size: size(50px);
     line-height: size(61px);
-    font-weight: 700;
+    font-weight: 800;
 
     @include vp-1023 {
       margin-bottom: 31px;
       max-width: 600px;
       font-size: 45px;
       line-height: 56px;
+    }
 
-      // & br {
-      //   display: none;
-      // }
+
+    @include vp-767 {
+      margin-bottom: 33px;
+      font-size: 28px;
+      line-height: 34px;
     }
   }
 
@@ -38,7 +66,7 @@
     color: #9e9e9e;
 
     @include vp-1023 {
-      margin-bottom: 26px;
+      margin-bottom: 25px;
       max-width: 400px;
       line-height: 20px;
     }
@@ -73,6 +101,10 @@
         height: 29px;
         margin-right: 18px;
       }
+    }
+
+    @include vp-767 {
+      padding-right: 62px;
     }
   }
 }
