--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -8,7 +8,7 @@
 }
 
 h2.category__heading {
-  margin-bottom: size(52px);
+  margin-bottom: size(50px);
   font-size: size(20px);
   line-height: size(24px);
   font-weight: 500;
@@ -16,6 +16,8 @@ h2.category__heading {
 
   @include vp-1023 {
     margin-bottom: 23px;
+    font-size: 20px;
+    line-height: 24px;
   }
 }
 
@@ -33,13 +35,18 @@ h2.category__heading {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: size(16px);
+
+  @include vp-1023 {
+    gap: 12px;
+  }
 }
 
 .category__item {
   a {
     padding: size(5px) size(10px);
     padding-left: 0;
+    font-size: 16px;
     color: #6b6b6b;
     background-color: transparent;
   }
