--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -7,17 +7,18 @@
 
 .copyright__title {
   margin-bottom: size(47px);
+  padding: 0;
+  align-items: center;
+  background-color: transparent;
 
   svg {
-    width: size(125px);
-    height: size(41px);
+    width: size(33px);
+    height: size(39px);
+    color: $color-default-white;
   }
 
   @include vp-767 {
     margin-bottom: 25px;
-    display: flex;
-    align-items: center;
-    gap: 4px;
 
     svg {
       width: 23px;
@@ -27,13 +28,15 @@
 }
 
 .copyright__heading {
-  @include vp-1023 {
-    display: none;
-  }
+  margin-left: size(10px);
+  padding-top: size(4px);
+  font-size: size(19px);
+  line-height: size(23px);
+  color: $color-default-white;
 
   @include vp-767 {
-    display: block;
-    color: $color-default-white;
+    margin-left: 5px;
+    font-size: 14px;
     line-height: 17px;
     font-weight: 500;
   }
