--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -25,6 +25,10 @@
     margin: 0;
   }
 
+  @include vp-1279 {
+    grid-template-columns: repeat(3, minmax(size(270px), 1fr));
+  }
+
   @include vp-1023 {
     grid-template-columns: 220px 200px;
     justify-content: space-between;
@@ -32,14 +36,13 @@
   }
 
   @include vp-767 {
-    padding: 28px 0 100px;
+    padding: 25px 0 98px;
     display: block;
   }
 }
 
 .footer__content {
   @include vp-767 {
-    // margin: 0 20px;
     position: relative;
 
     & + & > div::after {
