--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,8 +5,8 @@
 
   &__container + &__container {
     position: relative;
-    margin-top: size(38px);
-    padding-top: size(42px);
+    margin-top: size(39px);
+    padding-top: size(45px);
     &::before {
       content: "";
       position: absolute;
@@ -29,6 +29,7 @@
     }
   }
 
+
   .container {
     position: relative;
 
@@ -48,6 +49,7 @@
   @include vp-1023 {
     position: relative;
     padding: 30px 0;
+    z-index: 1;
 
     &::before {
       content: "";
@@ -69,6 +71,10 @@
       }
     }
   }
+
+  @include vp-767 {
+    padding: 13px 0 22px;
+  }
 }
 
 .header__title {
@@ -86,7 +92,7 @@
 
 .header__text {
   margin-left: size(10px);
-  padding-top: (4px);
+  padding-top: size(4px);
   font-size: size(19px);
   line-height: size(23px);
   font-weight: 500;
@@ -94,5 +100,13 @@
 
   @include vp-767 {
     display: none;
+  }
+}
+
+.header__menu-mobile {
+  display: none;
+
+  @include vp-1023 {
+    display: block;
   }
 }
