--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -2,45 +2,34 @@
   &__wrapper {
     padding-left: size(118px);
 
-    // @include vp-1023 {
-    //   padding-left: 0;
-    //   display: none;
-    //   position: absolute;
-    //   left: 0;
-    //   right: 0;
-    //   bottom: -30px;
-
-    //   &--open {
-    //     display: block;
-    //   }
-    // }
-
     @include vp-1023 {
       display: none;
     }
   }
 
   &__list {
-    margin: 0 auto 0 23%;
+    margin: 0 auto 0 24%;
     padding: 0;
     list-style: none;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: size(526px);
-
-    // @include vp-1023 {
-    //   margin: 0 auto;
-    // }
+    max-width: size(500px);
   }
 
-  &__link {
-    display: block;
-    line-height: size(19px);
-    padding: size(7px) size(15px);
-    color: $color-text;
+  &__item {
+    display: flex;
+    align-items: center;
 
-    &.is-active {
+    a {
+      display: block;
+      line-height: size(19px);
+      padding: size(7px) 0;
+      color: $color-text;
+      background-color: transparent;
+    }
+
+    & .is-active {
       color: rgba(72, 109, 216, 0.6);
     }
   }
@@ -48,16 +37,29 @@
   &__toggle {
     display: none;
 
-      @include vp-1023 {
-      display: block;
+    @include vp-1023 {
+      display: flex;
       margin: 0;
-      padding: 0;
+      margin-right: -3px;
+      padding: 3px;
       background-color: transparent;
       border: none;
 
       svg {
         width: 20px;
         height: 20px;
+      }
+
+      &--cross {
+        display: none;
+      }
+
+      &--open.main-nav__toggle--burger {
+        display: none;
+      }
+
+      &--open + .main-nav__toggle--cross {
+        display: flex;
       }
     }
   }
