--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -1,8 +1,10 @@
 .preview {
+  margin-top: size(-6px);
   padding-left: size(23px);
-  max-width: size(362px);
+  max-width: size(405px);
 
   @include vp-1023 {
+    margin-top: 227px;
     padding: 5px 21px 39px 21px;
     max-width: none;
   }
@@ -13,7 +15,7 @@
   margin-bottom: size(18px);
   font-size: size(30px);
   line-height: size(36px);
-  font-weight: 600;
+  font-weight: 800;
   color: #486dd8;
 
   @include vp-1023 {
@@ -27,4 +29,9 @@
   margin: 0;
   line-height: size(26px);
   color: #252830;
+  max-width: size(338px);
+
+  @include vp-1023 {
+    line-height: 22px;
+  }
 }
