--- a/source/sass/blocks/secondary-nav.scss
+++ b/source/sass/blocks/secondary-nav.scss
@@ -5,7 +5,7 @@
     display: none;
     padding-bottom: 48px;
     position: absolute;
-    top: 100px;
+    top: 86px;
     right: 60px;
     background-color: #f8f7fc;
     border-radius: 0 0 30px 30px;
@@ -13,6 +13,12 @@
     &--open {
       display: block;
     }
+  }
+
+  @include vp-767 {
+    top: 61px;
+    left: 0;
+    right: 0;
   }
 }
 
