--- a/source/sass/blocks/suggestion.scss
+++ b/source/sass/blocks/suggestion.scss
@@ -25,7 +25,7 @@
   display: grid;
   grid-template-columns: 66% 1fr;
   background-color: #f8f7fc;
-  border: 0.74px solid #e3e3e3;
+  border: size(0.74px) solid #e3e3e3;
   border-radius: size(20px);
 }
 
@@ -39,7 +39,7 @@
     margin: 0;
     font-size: size(20px);
     line-height: size(25px);
-    font-weight: 500;
+    font-weight: 400;
   }
 
   p {
@@ -61,7 +61,7 @@
   grid-row: 1 / 3;
   font-size: size(15px);
   line-height: size(18px);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .suggestion__price {
