--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,13 +1,3 @@
-// @font-face {
-//   font-style: normal;
-//   font-weight: 400;
-//   font-family: "Rouble";
-
-//   font-display: swap;
-//   src:
-//     url("../fonts/rouble.woff2") format("woff2");
-// }
-
 @font-face {
   font-style: normal;
   font-weight: 400;
@@ -24,6 +14,15 @@
 
   font-display: swap;
   src: url("../fonts/inter-v11-latin_cyrillic-500.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "inter";
+
+  font-display: swap;
+  src: url("../fonts/inter-v11-latin_cyrillic-700.woff2") format("woff2");
 }
 
 @font-face {
