--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/header";
 @import "blocks/main-nav";
 @import "blocks/secondary-nav";
+@import "blocks/data-accordion";
 @import "blocks/detail";
 @import "blocks/footer";
 @import "blocks/modal";
